k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
  namespace: pacman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
        - name: pacman
          image: grifon4ik/pacman:latest

          ports:
            - containerPort: 3000
