k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-service
  namespace: pacman
spec:
  selector:
    app: pacman
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
